tests/snapshots/run_wpt_conformance__trtx_log_float32_positive_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "log.https.any.js",
    "log float32 positive 4D tensor",
    "trtx",
    "PASS",
)
