tests/snapshots/run_wpt_conformance__trtx_logicalAnd_uint8_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "logical_and.https.any.js",
    "logicalAnd uint8 1D constant tensors",
    "trtx",
    Failed {
        msg: Some(
            "Failed to build graph: Runtime error: Failed to build serialized network\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  consts {\n    operand_0: u8[24] @bytes([0, 0, 1, 1, 0, 0, 2, 2, 0, 0, 8, 8, 0, 0, 8, 8, 0, 0, 255, 255, 0, 0, 255, 255]);\n    operand_1: u8[24] @bytes([0, 1, 0, 1, 0, 2, 0, 2, 0, 8, 0, 8, 0, 2, 0, 2, 0, 255, 0, 255, 0, 8, 0, 8]);\n  }\n\n  nodes {\n    [output] = logicalAnd(operand_0, operand_1, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
