tests/snapshots/run_wpt_conformance__trtx_logicalAnd_uint8_2D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "logical_and.https.any.js",
    "logicalAnd uint8 2D tensors",
    "trtx",
    Failed {
        msg: Some(
            "Failed to read tensor: DriverError(CUDA_ERROR_INVALID_VALUE, \"invalid argument\")\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: u8[4, 6];\n    inputB: u8[4, 6];\n  }\n\n  nodes {\n    [output] = logicalAnd(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
